--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -59,7 +59,7 @@ jobs:
           --with-uuid="ossp"
         
         # configure LD
-        export LD_RUN_PATH='$ORIGIN/../lib'
+        export LD_RUN_PATH='${{ '$ORIGIN' }}/../lib'
 
     - name: Make
       run: |
