--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -85,5 +85,5 @@ jobs:
         fail_on_unmatched_files: false
         generate_release_notes: true
         files: |
-          linux-${{ steps.config.outputs.CPU_ARCH }}.zip
+          ${{ steps.config.outputs.OUTPUT_DIR }}\linux-${{ steps.config.outputs.CPU_ARCH }}.zip
         
